# fastapi-postgresql-docker-sample

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: database.py  main.py  models.py  schemas.py
app/routes/: blog.py
migrations/: env.py
migrations/versions/: 050cc978aa05_add_columns_to_blog.py  0eef827b341f_create_blog_table.py  2a5f457c546b_remove_columns_from_blog.py  da8e3b4860ad_add_columns_to_blog.py
