[tool.poetry]
name = "fastapi-docker2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = "^0.17.0"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.19.2"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
aiofiles = "^0.8.0"
python-multipart = "^0.0.5"
alembic = "^1.7.5"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
